[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.poetry]
name = "dethklok"
version = "1.0.0"
description = "The most uncompromising Python code formatter ever!"
license = "MIT"
authors = ["Gram <mail@orsinium.dev>"]
repository = "https://github.com/orsinium-labs/dethklok"
readme = "README.md"
keywords = ["formatter", "black", "autopep8"]
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Software Development",
]

[tool.poetry.dependencies]
python = ">=3.6"
astunparse = "*"
autopep8 = "*"
